WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150657
Air::spillEverything() should try to replace tmps with spill slots without using registers whenever possible
https://bugs.webkit.org/show_bug.cgi?id=150657
Summary
Air::spillEverything() should try to replace tmps with spill slots without us...
Filip Pizlo
Reported
2015-10-28 18:56:30 PDT
This is necessary for lowering patchpoints and stackmaps, where the number of operands may be greater than the number of registers, and we're happy to accept stack slots instead of registers.
Attachments
the patch
(8.60 KB, patch)
2015-10-28 21:48 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-10-28 21:48:52 PDT
Created
attachment 264298
[details]
the patch
WebKit Commit Bot
Comment 2
2015-10-28 21:50:06 PDT
Attachment 264298
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/b3/air/AirSpillEverything.cpp:103: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-10-29 11:58:58 PDT
Comment on
attachment 264298
[details]
the patch r=me
Filip Pizlo
Comment 4
2015-10-29 12:02:27 PDT
Landed in
http://trac.webkit.org/changeset/191742
Csaba Osztrogonác
Comment 5
2015-10-29 12:43:14 PDT
(In reply to
comment #4
)
> Landed in
http://trac.webkit.org/changeset/191742
It broke the iOS build.
Filip Pizlo
Comment 6
2015-10-29 15:40:48 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > Landed in
http://trac.webkit.org/changeset/191742
> > It broke the iOS build.
I fixed it.
Csaba Osztrogonác
Comment 7
2015-10-30 03:01:53 PDT
(In reply to
comment #6
)
> (In reply to
comment #5
) > > (In reply to
comment #4
) > > > Landed in
http://trac.webkit.org/changeset/191742
> > > > It broke the iOS build. > > I fixed it.
... in
https://trac.webkit.org/changeset/191750
Thanks for the fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug